--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+        "start": "npm run dev -- --host 192.168.0.123"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
